--- a/cargo.toml
+++ b/cargo.toml
@@ -8,7 +8,9 @@ license = "MIT"
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.36", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 
 # Database handling with SQLite
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
