--- a/Frontend/frontend/.gitignore
+++ b/Frontend/frontend/.gitignore
@@ -21,3 +21,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Rust build artifacts
+/target/
+
+# Local database
+items.db
+
+# Python caches
+**/__pycache__/
+/**/*.pyc
+
+# macOS/Windows cruft
+.DS_Store
+Thumbs.db
+
+# IDE settings (if you want)
+/.vscode/
+/.idea/
