--- a/cargo.toml
+++ b/cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
-
+actix-web = "4"
 # GUI with egui + native window support via eframe
 eframe = "0.31.1"
 
@@ -37,3 +37,4 @@ tokio = { version = "1.36", features = ["full"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
 
 winapi = { version = "0.3.9", features = ["winuser", "windef"] }
+
