--- a/cargo.toml
+++ b/cargo.toml
@@ -7,28 +7,21 @@ description = "QuickStock: Inventory and Sales Management, rewritten in Rust"
 license = "MIT"
 
 [dependencies]
-# Async runtime
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 actix-web = "4"
-# GUI with egui + native window support via eframe
 eframe = "0.31.1"
-
-# Serialization / Deserialization
 serde_json = "1.0"
 toml = "0.8"
-
-# Encryption (AES-GCM)
 aes-gcm = "0.10"
 rand = "0.8"
-
-# Optional: base64 encoding/decoding for keys
 base64 = "0.22"
-
-# For development and debugging
 log = "0.4"
 env_logger = "0.10"
+rusqlite = { version = "0.29.0", features = ["bundled"] }
+csv = "1.1"
+
 [dev-dependencies]
 # For async tests
 tokio = { version = "1.36", features = ["full"] }
