--- a/cargo.toml
+++ b/cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 actix-web = "4"
+actix-cors = "0.6"
 eframe = "0.31.1"
 serde_json = "1.0"
 serde_derive = "1.0"
