--- a/cargo.toml
+++ b/cargo.toml
@@ -7,6 +7,7 @@ description = "QuickStock: Inventory and Sales Management, rewritten in Rust"
 license = "MIT"
 
 [dependencies]
+bcrypt = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
