--- a/cargo.toml
+++ b/cargo.toml
@@ -34,3 +34,6 @@ sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"
 
 winapi = { version = "0.3.9", features = ["winuser", "windef"] }
 
+# Included for tests
+[lib]
+path = "src/lib.rs"
